[package]
name = "kde_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-stats = "0.5.1"
dashmap = "5.5.3"
pyo3 = "0.21.2"
numpy = "0.21.0"
num = "0.4"
anyhow = "1.0.86"
