[package]
name = "kders"
version = "0.1.0"
edition = "2021"
authors = [
  "Zahra Zare Jousheghani <zzare@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
description = "A basic library for 2D kernel density estimation"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/kde-rs"
homepage = "https://COMBINE-lab.github.io/kde-rs"
include = ["/src/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = ["kernel-density", "density-estimation", "kde", "statistics"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-stats = "0.6.0"
num = "0.4"
anyhow = "1.0.86"
itertools = "0.13.0"

[dev-dependencies]
pyo3 = "0.21.2"
numpy = "0.21.0"
rand = "0.8.5"
kendalls = "0.2.2"
ordered-float = "4.2.2"
